--- a/app/src/main/res/layout/activity_note_details.xml
+++ b/app/src/main/res/layout/activity_note_details.xml
@@ -6,26 +6,29 @@
     android:layout_height="match_parent"
     tools:context=".NoteDetailsActivity"
     android:padding="@dimen/padding_medium"
-    android:orientation="vertical">
+    android:orientation="vertical"
+    android:background="@color/light_yellow">
 
 
     <EditText
         android:id="@+id/et_new_title"
         android:layout_width="match_parent"
-        android:layout_height="wrap_content"
+        android:layout_height="@dimen/height_title"
         android:layout_marginTop="@dimen/margin_big"
         android:textSize="@dimen/font_medium"
         android:textStyle="bold"
-        android:background="@color/light_green"/>
+        android:background="@color/light_green"
+        android:gravity="top"/>
 
     <EditText
         android:id="@+id/et_new_content"
         android:layout_width="match_parent"
-        android:layout_height="300dp"
+        android:layout_height="@dimen/height_content"
         android:layout_marginTop="@dimen/margin_medium"
         android:textSize="@dimen/font_medium"
         android:textStyle="normal"
-        android:background="@color/light_blue"/>
+        android:background="@color/light_blue"
+        android:gravity="top"/>
 
 
 
