--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -10,4 +10,6 @@
     <dimen name="font_big">30sp</dimen>
     <dimen name="radius_corner">15dp</dimen>
     <dimen name="margin_small">10dp</dimen>
+    <dimen name="height_title">100dp</dimen>
+    <dimen name="height_content">400dp</dimen>
 </resources>
