--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -30,7 +30,7 @@
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
         android:layout_gravity="center"
-        android:text="Add note"
+        android:text="@string/btn_create_note"
         android:layout_marginTop="@dimen/margin_medium"
         android:textStyle="bold"
         android:layout_marginBottom="@dimen/margin_big"
